First horizontal test

--- a/index.html
+++ b/index.html
@@ -15,20 +15,28 @@
 				overflow-y: auto;
 				height:100%;
 			}
+            .fd_row {
+                height:20%;
+            }
 			.img-module, .img-logo {
 				cursor: pointer;
 			}
+            .img-module {
+                font-size: 8em;
+            }
 		</style>
 	</head>
 	<body>
 		<content>
 			<section class="container-fluid viewport fullview">
-				<h1 class="text-center"><i class="fa fa-check"></i>Odoo L10n MX Modules</h1>
+<!--
+				<h1 class="text-center">Odoo L10n MX Modules</h1>
+-->
 				<!-- Diagram Row 1 -->
-				<div class="row">
+                <div class="row">
 					<div class="col-xs-2 col-xs-offset-1 "></div>
 					<div class="col-xs-2 "></div>
-					<div class="col-xs-2 "><img id="accounting" class="img-module img-responsive center-block" src="img/accounting.png" alt="Accounting"></div>
+					<div class="col-xs-2" ><img class="img-logo img-responsive center-block" src="img/odoomx.png" alt="Odoo L10n MX Modules"></div>
 					<div class="col-xs-2 "></div>
 					<div class="col-xs-2 "></div>
 				</div>
@@ -36,33 +44,17 @@
 				<div class="row">
 					<div class="col-xs-2 col-xs-offset-1 "><img id="sales" class="img-module img-responsive center-block" src="img/sales.png" alt="Sales"></div>
 					<div class="col-xs-2 "></div>
-					<div class="col-xs-2 "></div>
+					<div class="col-xs-2 "><img id="accounting" class="img-module img-responsive center-block" src="img/accounting.png" alt="Accounting"></div>
 					<div class="col-xs-2 "></div>
 					<div class="col-xs-2 "><img id="hr" class="img-module img-responsive center-block" src="img/hr.png" alt="Human Resources"></div>
 				</div>
 				<!-- Diagram Row 3 -->
 				<div class="row">
-					<div class="col-xs-2 col-xs-offset-1 "></div>
-					<div class="col-xs-2 "></div>
-					<div class="col-xs-2" ><img class="img-logo img-responsive center-block" src="img/odoomx.png" alt="Odoo L10n MX Modules"></div>
-					<div class="col-xs-2 "></div>
-					<div class="col-xs-2 "></div>
-				</div>
-				<!-- Diagram Row 4 -->
-				<div class="row">
 					<div class="col-xs-2 col-xs-offset-1 "><img id="documents" class="img-module img-responsive center-block" src="img/documents.png" alt="Documents"></div>
-					<div class="col-xs-2 "></div>
-					<div class="col-xs-2 "></div>
-					<div class="col-xs-2 "></div>
-					<div class="col-xs-2 "><img id="warehouse" class="img-module img-responsive center-block" src="img/warehouse.png" alt="Warehouse"></div>
-				</div>
-				<!-- Diagram Row 5 -->
-				<div class="row">
-					<div class="col-xs-2 col-xs-offset-1 "></div>
 					<div class="col-xs-2 "></div>
 					<div class="col-xs-2 "><img id="reports" class="img-module img-responsive center-block" src="img/reports.png" alt="Reports"></div>
 					<div class="col-xs-2 "></div>
-					<div class="col-xs-2 "></div>
+					<div class="col-xs-2 "><img id="warehouse" class="img-module img-responsive center-block" src="img/warehouse.png" alt="Warehouse"></div>
 				</div>
 				<div id="module-info" class="row">
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi vel nibh at sem suscipit suscipit non sit amet massa. Phasellus imperdiet neque eros, quis pulvinar magna volutpat a. Vestibulum lectus nibh, suscipit ac ullamcorper ut, faucibus nec justo. Sed vitae nulla vitae quam sagittis maximus ut ut tellus. Nullam viverra tincidunt lacus. Nam efficitur ultricies ex, ut tempor urna condimentum et. Suspendisse at mattis felis. Nulla aliquam est tempus massa consequat pellentesque sed et enim. Etiam est eros, hendrerit sed sagittis eget, condimentum laoreet lacus. Suspendisse tristique vulputate maximus. Ut facilisis turpis tellus, in molestie elit rutrum ut. Pellentesque eros quam, venenatis sit amet sem eu, fermentum scelerisque ipsum. Aenean ut nibh ac libero faucibus blandit quis non purus. Proin laoreet volutpat lorem a iaculis. Integer commodo, neque non faucibus viverra, sapien ligula faucibus metus, pellentesque cursus orci sapien tristique nibh. Etiam quis blandit enim, non porta arcu.</p>
