--- a/index.html
+++ b/index.html
@@ -9,22 +9,8 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 		<!-- Optional theme -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-		<style type="text/css">
-			.image-center { margin: 0 auto;}
-			.fullview {
-				//overflow-y: auto;
-				//height:100%;
-			}
-			.fd_row {
-				margin-top:30px;
-			}
-			.img-module, .img-logo {
-				cursor: pointer;
-			}
-			.img-module {
-				font-size: 8em;
-			}
-		</style>
+		<!-- FDisplay -->
+		<link rel="stylesheet" href="css/fdisplay.css" />
 	</head>
 	<body>
 		<content>
