Using glyphicon in back button

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 						<span>Module subtitle</span>
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi vel nibh at sem suscipit suscipit non sit amet massa. Phasellus imperdiet neque eros, quis pulvinar magna volutpat a. Vestibulum lectus nibh, suscipit ac ullamcorper ut, faucibus nec justo. Sed vitae nulla vitae quam sagittis maximus ut ut tellus. Nullam viverra tincidunt lacus. Nam efficitur ultricies ex, ut tempor urna condimentum et. Suspendisse at mattis felis. Nulla aliquam est tempus massa consequat pellentesque sed et enim. Etiam est eros, hendrerit sed sagittis eget, condimentum laoreet lacus. Suspendisse tristique vulputate maximus. Ut facilisis turpis tellus, in molestie elit rutrum ut. Pellentesque eros quam, venenatis sit amet sem eu, fermentum scelerisque ipsum. Aenean ut nibh ac libero faucibus blandit quis non purus. Proin laoreet volutpat lorem a iaculis. Integer commodo, neque non faucibus viverra, sapien ligula faucibus metus, pellentesque cursus orci sapien tristique nibh. Etiam quis blandit enim, non porta arcu.</p>
 						<a href="#" class="btn btn-primary btn-lg center-block">Click here to see more</a>
-						<a href="#" class="btn btn-default btn-xs center-block fd_back">&lt; Go back</a>
+						<a href="#" class="btn btn-default btn-sm center-block fd_back"><i class="glyphicon glyphicon-chevron-left"></i> Go back</a>
 					</div>
 				</div>
 				<!-- Diagram Row 2 -->
